--- a/index.html
+++ b/index.html
@@ -11,16 +11,27 @@
 <body>
     <main>
         <h1>Welcome to My Website</h1>
-            BGCOLOR=#FFFFFF
-            TEXT=#000000>
-    
-        <g1>Machine Learning</g1>
         
-        <P>Guidelines for<P>
-        <A HREF="http://itstud.hiof.no/~rolando/ML/project1_eng.pdf">project 1 </A>
-        <P>
-        <A HREF="http://itstud.hiof.no/~rolando/ML/project2_eng.pdf">project 2 </A>
-        <P>
+        <h1>My Table</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Column 1</th>
+                    <th>Column 2</th>
+                    <th>Column 3</th>
+                    <th>Column 4</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Data 1</td>
+                    <td>Data 2</td>
+                    <td>Data 3</td>
+                    <td>Data 4</td>
+                </tr>
+                <!-- Add more rows as needed -->
+            </tbody>
+        </table>
     </main>
     <script src="index.js"></script>
 </body>
