--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             color: white;
             text-align: center;
             padding: 20px 0;
+            position: sticky;
+            bottom: 0;
         }
         .footer-content {
             display: flex;
