--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="Your Company Logo">
+            <img src="IFE-logo_ENGLISH_RBG-color.png.png" alt="">
         </div>
         <!-- Other header content (navigation, etc.) -->
     </header>
@@ -104,14 +104,14 @@
 
     <footer>
         <div class="footer-content">
-            <p>Contact: info@example.com</p>
+            <p>Contact: chau.tran@ife.no</p>
             <ul class="social-links">
                 <li><a href="#"><img src="facebook-icon.png" alt="Facebook"></a></li>
                 <li><a href="#"><img src="twitter-icon.png" alt="Twitter"></a></li>
                 <!-- Add more social icons as needed -->
             </ul>
         </div>
-        <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+        <p>&copy; 2024 Institution for Energy. All rights reserved.</p>
     </footer>
 </body>
 </html>
