--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             background-color: #f2f2f2;
         }
         footer {
-            background-color: #333;
-            color: white;
+            /* background-color: #333; */
+            color: blue; /* Change font color to blue */
             text-align: center;
             padding: 20px 0;
             position: sticky;
