--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         }
         footer {
             /* background-color: #333; */
-            color: blue; /* Change font color to blue */
+            color: black; /* Change font color to blue */
             text-align: center;
             padding: 20px 0;
             position: sticky;
