--- a/index.html
+++ b/index.html
@@ -37,76 +37,61 @@
             background-color: #f2f2f2;
         }
         footer {
-            /* background-color: #333; */
             color: black; /* Change font color to blue */
             text-align: center;
             padding: 20px 0;
             position: sticky;
             bottom: 0;
         }
-        .footer-content {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .footer-content p {
-            margin: 0;
-        }
-        .social-links {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-        .social-links li {
-            margin-right: 10px;
-        }
-        .social-links img {
-            width: 20px;
-            height: 20px;
-        }
     </style>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="IFE-logo_ENGLISH_RBG-color.png.png" alt="">
+            <img src="logo.png" alt="Your Company Logo">
         </div>
         <!-- Other header content (navigation, etc.) -->
     </header>
 
-    <h1>Professional Table Example</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Role</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>John Doe</td>
-                <td>john@example.com</td>
-                <td>Developer</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Jane Smith</td>
-                <td>jane@example.com</td>
-                <td>Designer</td>
-            </tr>
-            <!-- Add more rows as needed -->
-        </tbody>
-    </table>
+    <main>
+        <h1>Professional Table Example</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Role</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>John Doe</td>
+                    <td>john@example.com</td>
+                    <td>Developer</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Jane Smith</td>
+                    <td>jane@example.com</td>
+                    <td>Designer</td>
+                </tr>
+                <!-- Add more rows as needed -->
+            </tbody>
+        </table>
+    </main>
 
     <footer>
         <div class="footer-content">
-            <p>Contact: chau.tran@ife.no</p>
+            <p>Contact: info@example.com</p>
+            <ul class="social-links">
+                <li><a href="#"><img src="facebook-icon.png" alt="Facebook"></a></li>
+                <li><a href="#"><img src="twitter-icon.png" alt="Twitter"></a></li>
+                <!-- Add more social icons as needed -->
+            </ul>
         </div>
-        <p>&copy; 2024 Institution for Energy. All rights reserved.</p>
+        <p>© 2024 Your Company Name. All rights reserved.</p>
     </footer>
 </body>
 </html>
