--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             margin: 0;
             padding: 0;
             background-color: #f5f5f5;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh; /* Set minimum height to fill the viewport */
         }
         h1 {
             text-align: center;
@@ -37,7 +40,7 @@
             background-color: #f2f2f2;
         }
         footer {
-            color: black; /* Change font color to blue */
+            color: blue;
             text-align: center;
             padding: 20px 0;
             position: sticky;
