--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-color: #f5f5f5;
             display: flex;
             flex-direction: column;
-            min-height: 100vh; /* Set minimum height to fill the viewport */
+            min-height: 100vh;
         }
         h1 {
             text-align: center;
@@ -45,6 +45,10 @@
             padding: 20px 0;
             position: sticky;
             bottom: 0;
+        }
+        main {
+            flex: 1;
+            min-height: 80vh;
         }
     </style>
 </head>
