--- a/index.html
+++ b/index.html
@@ -54,12 +54,39 @@
     </style>
 </head>
 <body>
-    <!-- Header content remains unchanged -->
+    <header>
+        <div class="logo">
+            <img src="logo.png" alt="Your Company Logo">
+        </div>
+        <!-- Other header content (navigation, etc.) -->
+    </header>
 
     <main>
         <h1>Professional Table Example</h1>
         <table>
-            <!-- Table content here -->
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Role</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>John Doe</td>
+                    <td>john@example.com</td>
+                    <td>Developer</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Jane Smith</td>
+                    <td>jane@example.com</td>
+                    <td>Designer</td>
+                </tr>
+                <!-- Add more rows as needed -->
+            </tbody>
         </table>
     </main>
 
