--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                     <td>1</td>
                     <td>John Doe</td>
                     <td>john@example.com</td>
-                    <td>Developer</td>
+                    <td><a href="role-details.html">Developer</a></td> <!-- Add the hyperlink here -->
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>Jane Smith</td>
                     <td>jane@example.com</td>
-                    <td>Designer</td>
+                    <td><a href="role-details.html">Designer</a></td> <!-- Add the hyperlink here -->
                 </tr>
                 <!-- Add more rows as needed -->
             </tbody>
