--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Professional Webpage</title>
+    <title>ADS_Scientific Discussion</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -56,25 +56,25 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="Your Company Logo">
+            <img src="IFE-logo_ENGLISH_RBG-color.png" alt="">
         </div>
         <!-- Other header content (navigation, etc.) -->
     </header>
 
     <main>
-        <h1>Professional Table Example</h1>
+        <h1>ADS - Scientific Discussion Schedule</h1>
         <table>
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Role</th>
+                    <th>Date</th>
+                    <th>PiC</th>
+                    <th>Topic</th>
+                    <th>Link</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>1</td>
+                    <td></td>
                     <td>John Doe</td>
                     <td>john@example.com</td>
                     <td><a href="role-details.html">Developer</a></td> <!-- Add the hyperlink here -->
@@ -92,14 +92,9 @@
 
     <footer>
         <div class="footer-content">
-            <p>Contact: info@example.com</p>
-            <ul class="social-links">
-                <li><a href="#"><img src="facebook-icon.png" alt="Facebook"></a></li>
-                <li><a href="#"><img src="twitter-icon.png" alt="Twitter"></a></li>
-                <!-- Add more social icons as needed -->
-            </ul>
+            <p>Contact: chau.tran@ife.no</p>
         </div>
-        <p>© 2024 Your Company Name. All rights reserved.</p>
+        <p>© 2024 Institution for Energy. All rights reserved.</p>
     </footer>
 </body>
 </html>
