--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             flex: 1;
             min-height: 80vh;
         }
+        .logo {
+            width: 70%;
+        }
         .highlight {
             color: red;
         }
