--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         table {
             border-collapse: collapse;
             width: 80%;
-            margin: 20px auto;
+            /* margin: 20px auto; */
             background-color: #fff;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
