--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             color: #333;
         }
         table {
+            table-layout: auto;
             border-collapse: collapse;
             width: 80%;
             margin: 20px auto;
