--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <tr><td>September 6, 2024</td><td>Bokolo, Anthony Junior</td><td>None</td><td><a href="#">None</a></td></tr>
             <tr><td>September 13, 2024</td><td>Randem, Hans Olav</td><td>None</td><td><a href="#">None</a></td></tr>
             <tr><td>September 20, 2024</td><td>Thunem, Harald P-J</td><td>None</td><td><a href="#">None</a></td></tr>
-            <tr><td>September 27, 2024</td><td>K</td><td>None</td><td><a href="#">None</a></td></tr>
+            <tr><td>September 27, 2024</td><td>Kjølerbakken, Morgan</td><td>None</td><td><a href="#">None</a></td></tr>
             <!-- October -->
             <tr><td>October 4, 2024</td><td>Misra, Sanjay</td><td>None</td><td><a href="#">None</a></td></tr>
             <tr><td>October 11, 2024</td><td>Tran, Chau Thi Thuy</td><td>None</td><td><a href="#">None</a></td></tr>
