--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             color: black; /* Change font color to black */
             text-align: center;
             padding: 20px 0;
-            position: sticky;
+            position: relative;
             bottom: 0;
             font-size: 14px; /* Adjust font size as needed */
         }
