--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
             flex: 1;
             min-height: 80vh;
         }
-        .logo {
+        /* .logo {
             width: 30%;
-        }
+            height: auto;
+        } */
         .highlight {
             color: red;
         }
@@ -63,7 +64,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="IFE-logo_ENGLISH_RBG-color.png" alt="">
+            <img src="IFE-logo_ENGLISH_RBG-color.png" alt="" width="70%" height="auto">
         </div>
         <!-- Other header content (navigation, etc.) -->
     </header>
