--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,38 @@
             width: 100px;
             height: 100px;
             background-color: #ccc;
+            border-radius: 50%;
+            margin: 20px auto;
+        }
+
+        /* CSS styles for the table */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #ccc;
+        }
+
+        /* CSS styles for the button */
+        button {
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+            margin-bottom: 20px;
+        }
+
+        /* CSS styles for the footer */
+        footer {
+            background-color: #f9f9f9;
+            padding: 10px;
+            text-align: center;
         }
     </style>
 </head>
