--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,9 @@
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-bottom: 20px;
+            margin: 0 auto; /* Center the table */
+            background-color: blue; /* Set blue as the main color */
+            color: white; /* Set white as the text color */
         }
 
         th, td {
