--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <tr><td>September 20, 2024</td><td>Thunem, Harald P-J</td><td>None</td><td><a href="#">None</a></td></tr>
             <tr><td>September 27, 2024</td><td>Kjølerbakken, Morgan</td><td>None</td><td><a href="#">None</a></td></tr>
             <!-- October -->
-            <tr><td>October 4, 2024</td><td>Bisio, Rossella</td><td>None</td><td><a href="#">None</a></td></tr>
+            <tr><td>October 4, 2024</td><td>Bisio, Rossella</td><td>Human-AI Interaction: A brief overview</td><td><a href="#">None</a></td></tr>
             <tr><td>October 11, 2024</td><td>Bodal, Terje</td><td>None</td><td><a href="#">None</a></td></tr>
             <tr><td>October 18, 2024</td><td>Langstrand, Jens-Patrick</td><td>None</td><td><a href="#">None</a></td></tr>
             <tr><td>October 25, 2024</td><td>Nguyen, Hoa Thi</td><td>None</td><td><a href="#">None</a></td></tr>
