--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <tr><td>August 23, 2024</td><td>Nguyen, Hoa Thi</td><td>Spatial/Spatial-Temporal Analysis</td><td><a href="https://ifecloud.sharepoint.com/:p:/r/sites/GRPDSINTSYSDepartment/Shared%20Documents/Scientific%20Discussion/spatial_statistics.pptx?d=w2426818eab5b4fc897b6d70e2d651e0c&csf=1&web=1&e=ZH9fdN">Presentation</a></td></tr>
             <tr><td>August 30, 2024</td><td>Hulsund, John Einar</td><td>Distributed computing with Spark</td><td><a href="#">None</a></td></tr>
             <!-- September -->
-            <tr><td>September 6, 2024</td><td>Bokolo, Anthony Junior</td><td>None</td><td><a href="#">None</a></td></tr>
+            <tr><td>September 6, 2024</td><td>Bokolo, Anthony Junior</td><td> Digital Road Operator Information and Data Strategy (DRIODS) project</td><td><a href="#">None</a></td></tr>
             <tr><td>September 13, 2024</td><td>Randem, Hans Olav</td><td>[Flex4Fact] Detection of die-fouling</td><td><a href="#">None</a></td></tr>
             <tr><td>September 20, 2024</td><td>Thunem, Harald P-J</td><td>None</td><td><a href="#">None</a></td></tr>
             <tr><td>September 27, 2024</td><td>Kjølerbakken, Morgan</td><td>None</td><td><a href="#">None</a></td></tr>
