--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <tr><td>August 9, 2024</td><td>Langstrand, Jens-Patrick</td><td>CRItical SPeed function and Automatic speed control function ahead of a dangerous road section (CriSp)</td><td><a href="https://ifecloud.sharepoint.com/:p:/r/sites/GRPDSINTSYSDepartment/Shared%20Documents/Scientific%20Discussion/ScientificDiscussion_IFE.pptx?d=wf034b1b810684e64964736870454fce5&csf=1&web=1&e=vuSzGs">Presentation</a></td></tr>
             <tr><td>August 16, 2024</td><td></td><td>None</td><td><a href="#">None</a></td></tr>
             <tr><td>August 23, 2024</td><td>Nguyen, Hoa Thi</td><td>Spatial/Spatial-Temporal Analysis</td><td><a href="https://ifecloud.sharepoint.com/:p:/r/sites/GRPDSINTSYSDepartment/Shared%20Documents/Scientific%20Discussion/spatial_statistics.pptx?d=w2426818eab5b4fc897b6d70e2d651e0c&csf=1&web=1&e=ZH9fdN">Presentation</a></td></tr>
-            <tr><td>August 30, 2024</td><td>Hulsund, John Einar</td><td>Distributed computing with Spark</td><td><a href="#">None</a></td></tr>
+            <tr><td>August 30, 2024</td><td>Hulsund, John Einar</td><td>Distributed computing with Spark</td><td><a href="https://ifecloud.sharepoint.com/:p:/r/sites/GRPDSINTSYSDepartment/Shared%20Documents/Scientific%20Discussion/Apache%20Spark%20Distributed%20Computing.pptx?d=w897a4d0b28ce4bc0a3f256f161f1bf11&csf=1&web=1&e=0ub0gy">Presentation</a></td></tr>
             <!-- September -->
             <tr><td>September 6, 2024</td><td>Bokolo, Anthony Junior</td><td> Digital Road Operator Information and Data Strategy (DRIODS) project</td><td><a href="#">None</a></td></tr>
             <tr><td>September 13, 2024</td><td>Randem, Hans Olav</td><td>[Flex4Fact] Detection of die-fouling</td><td><a href="#">None</a></td></tr>
