--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             <tr><td>September 5, 2024</td><td>Miki Sirola</td><td>Machine learning in Online Monitoring – State-based approach with Data Examples​</td><td><a href="https://ifecloud.sharepoint.com/:p:/r/sites/GRPDSINTSYSDepartment/Shared%20Documents/Scientific%20Discussion/Machine%20learning%20in%20online%20monitoring%20%E2%80%93%20state-based%20approach%20with%20data%20examples.pptx?d=wcac76786e14b4c88a24d5799ccfe6e5e&csf=1&web=1&e=YbmCYJ">Presentation</a></td></tr>
             <tr><td>September 6, 2024</td><td>Bokolo, Anthony Junior</td><td> Digital Road Operator Information and Data Strategy (DRIODS) project</td><td><a href="https://ifecloud.sharepoint.com/:p:/r/sites/GRPDSINTSYSDepartment/Shared%20Documents/Scientific%20Discussion/DROIDS-CEDR-WP5-GENERAL%20for%20ADS,%20IFE%206-09-2024.pptx?d=w6f522e7dd7f0409baeb265e5e1822c19&csf=1&web=1&e=1mbRua">Presentation</a></td></tr>
             <tr><td>September 13, 2024</td><td>Randem, Hans Olav</td><td>[Flex4Fact] Detection of die-fouling</td><td><a href="#">None</a></td></tr>
-            <tr><td>September 20, 2024</td><td>Thunem, Harald P-J</td><td>Dart and Flutter for cross-platform development</td><td><a href="#">None</a></td></tr>
-            <tr><td>September 27, 2024</td><td>Kjølerbakken, Morgan</td><td>None</td><td><a href="#">None</a></td></tr>
+            <tr><td>September 20, 2024</td><td>Thunem, Harald P-J</td><td>Dart and Flutter for cross-platform development</td><td><a href="https://ifecloud.sharepoint.com/:p:/r/sites/GRPDSINTSYSDepartment/Shared%20Documents/Scientific%20Discussion/Dart%20and%20Flutter%20for%20Cross-Platform%20Development.pptx?d=w951a0812ca8443cfa1dc0d20b3921d35&csf=1&web=1&e=aIIxQ7">Presentation</a></td></tr>
+            <tr><td>September 27, 2024</td><td></td><td>Cancel</td><td><a href="#">None</a></td></tr>
             <!-- October -->
             <tr><td>October 4, 2024</td><td>Bisio, Rossella</td><td>Human-AI Interaction: A brief overview</td><td><a href="#">None</a></td></tr>
             <tr><td>October 11, 2024</td><td>Bodal, Terje</td><td>None</td><td><a href="#">None</a></td></tr>
