--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
             <tr><td>September 20, 2024</td><td>Thunem, Harald P-J</td><td>Dart and Flutter for cross-platform development</td><td><a href="https://ifecloud.sharepoint.com/:p:/r/sites/GRPDSINTSYSDepartment/Shared%20Documents/Scientific%20Discussion/Dart%20and%20Flutter%20for%20Cross-Platform%20Development.pptx?d=w951a0812ca8443cfa1dc0d20b3921d35&csf=1&web=1&e=aIIxQ7">Presentation</a></td></tr>
             <tr><td>September 27, 2024</td><td></td><td>Cancel</td><td><a href="#">None</a></td></tr>
             <!-- October -->
-            <tr><td>October 4, 2024</td><td>Bisio, Rossella</td><td>Human-AI Interaction: A brief overview</td><td><a href="#">None</a></td></tr>
-            <tr><td>October 11, 2024</td><td>Bodal, Terje</td><td>None</td><td><a href="#">None</a></td></tr>
-            <tr><td>October 18, 2024</td><td>Langstrand, Jens-Patrick</td><td>None</td><td><a href="#">None</a></td></tr>
-            <tr><td>October 25, 2024</td><td>Nguyen, Hoa Thi</td><td>None</td><td><a href="#">None</a></td></tr>
+            <tr><td>October 4, 2024</td><td></td><td></td><td><a href="#">None</a></td></tr>
+            <tr><td>October 11, 2024</td><td>Bisio, Rossella</td><td>Human-AI Interaction: A brief overview</td><td><a href="#">None</a></td></tr>
+            <tr><td>October 18, 2024</td><td>Bodal, Terje</td><td>None</td><td><a href="#">None</a></td></tr>
+            <tr><td>October 25, 2024</td><td>Langstrand, Jens-Patrick</td><td>None</td><td><a href="#">None</a></td></tr>
             <!-- November -->
             <tr><td>November 1, 2024</td><td>Misra, Sanjay</td><td>None</td><td><a href="#">None</a></td></tr>
             <tr><td>November 8, 2024</td><td>Tran, Chau Thi Thuy</td><td>None</td><td><a href="#">None</a></td></tr>
