--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <!-- October -->
             <tr><td>October 4, 2024</td><td></td><td></td><td><a href="#">None</a></td></tr>
             <tr><td>October 11, 2024</td><td>Bisio, Rossella</td><td>Human-AI Interaction: A brief overview</td><td><a href="#">None</a></td></tr>
-            <tr><td>October 18, 2024</td><td>Bodal, Terje</td><td>None</td><td><a href="#">None</a></td></tr>
+            <tr><td>October 18, 2024</td><td>Bodal, Terje</td><td>AI4ARGO</td><td><a href="#">Room 431</a></td></tr>
             <tr><td>October 25, 2024</td><td>Langstrand, Jens-Patrick</td><td>None</td><td><a href="#">None</a></td></tr>
             <!-- November -->
             <tr><td>November 1, 2024</td><td>Misra, Sanjay</td><td>None</td><td><a href="#">None</a></td></tr>
