--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <tr><td>October 4, 2024</td><td></td><td></td><td><a href="#">None</a></td></tr>
             <tr><td>October 11, 2024</td><td>Bisio, Rossella</td><td> LLMs: the debate over understanding</td><td><a href="https://ifecloud.sharepoint.com/:p:/r/sites/GRPDSINTSYSDepartment/Shared%20Documents/Scientific%20Discussion/LLM%20debate%20understanding.pptx?d=w487caedf8f5f4cb58e29d324f509f242&csf=1&web=1&e=yJVJtb">Presentation</a></td></tr>
             <tr><td>October 18, 2024</td><td>Bodal, Terje</td><td>AI4ARGO</td><td><a href="#">Room 431</a></td></tr>
-            <tr><td>October 25, 2024</td><td>Langstrand, Jens-Patrick</td><td>None</td><td><a href="#">None</a></td></tr>
+            <tr><td>October 25, 2024</td><td>Oliver and Håkon</td><td>Sharing about their works</td><td><a href="#">None</a></td></tr>
             <!-- November -->
             <tr><td>November 1, 2024</td><td>Misra, Sanjay</td><td>None</td><td><a href="#">None</a></td></tr>
             <tr><td>November 8, 2024</td><td>Tran, Chau Thi Thuy</td><td>None</td><td><a href="#">None</a></td></tr>
