correct the footer

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="footer-content">
             <p>Contact: chau.tran@ife.no</p>
         </div>
-        <p>© 2024 Institution for Energy. All rights reserved.</p>
+        <p>© 2024 Institute for Energy Technology. All rights reserved.</p>
     </footer>
 </body>
 </html>
