--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             <tr><td>October 18, 2024</td><td>Bodal, Terje</td><td>AI4ARGO</td><td><a href="#">Room 431</a></td></tr>
             <tr><td>October 25, 2024</td><td>Oliver and Håkon</td><td>Sharing about their works</td><td><a href="#">None</a></td></tr>
             <!-- November -->
-            <tr><td>November 1, 2024</td><td>Misra, Sanjay</td><td>None</td><td><a href="#">None</a></td></tr>
-            <tr><td>November 8, 2024</td><td>Tran, Chau Thi Thuy</td><td>None</td><td><a href="#">None</a></td></tr>
-            <tr><td>November 15, 2024</td><td>Hoffmann, Mario</td><td>None</td><td><a href="#">None</a></td></tr>
+            <tr><td>November 1, 2024</td><td>Misra, Sanjay</td><td>Cancel</td><td><a href="#">None</a></td></tr>
+            <tr><td>November 8, 2024</td><td>Tran, Chau Thi Thuy</td><td>Cancel</td><td><a href="#">None</a></td></tr>
+            <tr><td>November 15, 2024</td><td>Hoffmann, Mario</td><td>Cancel</td><td><a href="#">None</a></td></tr>
             <tr><td>November 22, 2024</td><td>Hulsund, John Einar</td><td>None</td><td><a href="#">None</a></td></tr>
             <tr><td>November 29, 2024</td><td>Bokolo, Anthony Junior</td><td>None</td><td><a href="#">None</a></td></tr>
             <!-- December -->
