Adding the topic

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     <h1>ADS - Scientific Discussion Schedule 2025</h1>
     <table id="sd_schedule">
       <tr><th>Date</th><th>Name</th><th>Topic</th><th>Link</th></tr>
-      <tr><td>August 15, 2025</td><td>Tran, Chau Thi Thuy</td><td>TBD</td><td><a href="#">#</a></td></tr>
-      <tr><td>August 22, 2025</td><td>Nguyen, Hoa Thi</td><td>TBD</td><td><a href="#">#</a></td></tr>
-      <tr><td>August 29, 2025</td><td>Langstrand, Jens-Patrick</td><td>TBD</td><td><a href="#">#</a></td></tr>
-      <tr><td>September 5, 2025</td><td>Randem, Hans Olav</td><td>TBD</td><td><a href="#">#</a></td></tr>
-      <tr><td>September 12, 2025</td><td>Bisio, Rossella</td><td>TBD</td><td><a href="#">#</a></td></tr>
+      <tr><td>August 15, 2025</td><td>Tran, Chau Thi Thuy</td><td>WindAI Competition – Forecasting Wind Power Production</td><td><a href="#">#</a></td></tr>
+      <tr><td>August 22, 2025</td><td>Randem, Hans Olav</td><td>Video related to Neural Networks</td><td><a href="#">#</a></td></tr>
+      <tr><td>August 29, 2025</td><td>Bisio, Rossella</td><td>Model Context Protocol and agentic behaviour </td><td><a href="#">#</a></td></tr>
+      <tr><td>September 5, 2025</td><td>Nguyen, Hoa Thi</td><td>TBD</td><td><a href="#">#</a></td></tr>
+      <tr><td>September 12, 2025</td><td>Langstrand, Jens-Patrick</td><td>TBD</td><td><a href="#">#</a></td></tr>
       <tr><td>September 19, 2025</td><td>Bokolo, Anthony Junior</td><td>TBD</td><td><a href="#">#</a></td></tr>
       <tr><td>September 26, 2025</td><td>Hulsund, John Einar</td><td>TBD</td><td><a href="#">#</a></td></tr>
       <tr><td>October 3, 2025</td><td>Wingstedt, Emil</td><td>TBD</td><td><a href="#">#</a></td></tr>
