--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
       <tr><td>August 22, 2025</td><td>Randem, Hans Olav</td><td>Video related to Neural Networks</td><td><a href="#">#</a></td></tr>
       <tr><td>August 29, 2025</td><td>Bisio, Rossella</td><td>Model Context Protocol and agentic behaviour </td><td><a href="#">#</a></td></tr>
       <tr><td>September 5, 2025</td><td>Tran, Chau Thi Thuy</td><td>Physics Informed Neural Network (PINN)</td><td><a href="#">#</a></td></tr>
-      <tr><td>September 12, 2025</td><td>None</td><td>TBD</td><td><a href="#">#</a></td></tr>
-      <tr><td>September 19, 2025</td><td>None</td><td>TBD</td><td><a href="#">#</a></td></tr>
+      <tr><td>September 12, 2025</td><td>None</td><td>None</td><td><a href="#">#</a></td></tr>
+      <tr><td>September 19, 2025</td><td>None</td><td>None</td><td><a href="#">#</a></td></tr>
       <tr><td>September 26, 2025</td><td>Hulsund, John Einar</td><td>Amazing tips and tricks in Python</td><td><a href="#">#</a></td></tr>
-      <tr><td>October 3, 2025</td><td>HøstFeire</td><td>TBD</td><td><a href="#">#</a></td></tr>
+      <tr><td>October 3, 2025</td><td>HøstFeire</td><td>None</td><td><a href="#">#</a></td></tr>
       <tr><td>October 10, 2025</td><td>Wingstedt, Emil</td><td>TBD</td><td><a href="#">#</a></td></tr>
       <tr><td>October 17, 2025</td><td>Thunem, Harald P-J</td><td>TBD</td><td><a href="#">#</a></td></tr>
       <tr><td>October 24, 2025</td><td>Misra, Sanjay</td><td>TBD</td><td><a href="#">#</a></td></tr>
