--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <tr><td>September 19, 2025</td><td>None</td><td>None</td><td><a href="#">#</a></td></tr>
       <tr><td>September 26, 2025</td><td>Hulsund, John Einar</td><td>Amazing tips and tricks in Python</td><td><a href="#">#</a></td></tr>
       <tr><td>October 3, 2025</td><td>HøstFeire</td><td>None</td><td><a href="#">#</a></td></tr>
-      <tr><td>October 10, 2025</td><td>Thunem, Harald P-J</td><td>TBD</td><td><a href="#">#</a></td></tr>
+      <tr><td>October 10, 2025</td><td>Thunem, Harald P-J</td><td>Sharing about the Streamlit library</td><td><a href="#">#</a></td></tr>
       <tr><td>October 17, 2025</td><td>Wingstedt, Emil</td><td>About "Nuclear Need in Norway" project </td><td><a href="#">#</a></td></tr>
       <tr><td>October 24, 2025</td><td>Misra, Sanjay</td><td>TBD</td><td><a href="#">#</a></td></tr>
       <tr><td>October 31, 2025</td><td>Jørgensen, Per-Arne</td><td>TBD</td><td><a href="#">#</a></td></tr>
