--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <tr><td>January 30, 2026</td><td>ADS</td><td>Kai Morgan Kjølerbakken</td><td>Introducing about the microphone array.</td><td><a href="#">#</a></td></tr>
 
             <tr><td>February 6, 2026</td><td>VR</td><td>Sathiya Kumar Renganayagalu</td><td>Developing synthetic Digital Twin Testbeds for Research Applications</td><td><a href="#">#</a></td></tr>
-            <tr><td>February 13, 2026</td><td>ADS</td><td>Petter Kvalvik</td><td>TBD</td><td><a href="#">#</a></td></tr>
+            <tr><td>February 13, 2026</td><td>ADS</td><td>Kai Morgan Kjølerbakken</td><td>Discussion on HTO proposal rating and comments</td><td><a href="#">#</a></td></tr>
             <tr><td>February 20, 2026</td><td>DIS</td><td>Rossella Bisio</td><td>TBD</td><td><a href="#">#</a></td></tr>
             <tr><td>February 27, 2026</td><td>ADS</td><td>John Einar Hulsund</td><td>TBD</td><td><a href="#">#</a></td></tr>
 
