--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             
             <tr><td>January 30, 2026</td><td>ADS/DIS/others</td><td>Everyone</td><td>Farewell to Brit-Kari.</td><td><a href="#">#</a></td></tr>
 
-            <tr><td>February 6, 2026</td><td>VR</td><td>Sathiya Kumar Renganayagalu</td><td>Developing synthetic Digital Twin Testbeds for Research Applications</td><td><a href="Link">https://ifecloud.sharepoint.com/:f:/r/sites/GRPDSINTSYSDepartment/Shared%20Documents/Scientific%20Discussion/2026/%5B02Feb%5D_%5BSathiya%5D_DevelopingSyntheticDigitalTwinTestbedsforResearchApplications?csf=1&web=1&e=t84gLb</a></td></tr>
+            <tr><td>February 6, 2026</td><td>VR</td><td>Sathiya Kumar Renganayagalu</td><td>Developing synthetic Digital Twin Testbeds for Research Applications</td><td><a href="https://ifecloud.sharepoint.com/:f:/r/sites/GRPDSINTSYSDepartment/Shared%20Documents/Scientific%20Discussion/2026/%5B02Feb%5D_%5BSathiya%5D_DevelopingSyntheticDigitalTwinTestbedsforResearchApplications?csf=1&web=1&e=J9GRT6">Link</a></td></tr>
             <tr><td>February 13, 2026</td><td>ADS</td><td>Kai Morgan Kjølerbakken</td><td>Discussion on HTO proposal rating and comments</td><td><a href="#">#</a></td></tr>
             <tr><td>February 20, 2026</td><td>DIS</td><td>Rossella Bisio</td><td>TBD</td><td><a href="#">#</a></td></tr>
             <tr><td>February 27, 2026</td><td>ADS</td><td>John Einar Hulsund</td><td>TBD</td><td><a href="#">#</a></td></tr>
